04 Kubernetes Azure/resilience/deployment-aks-with-health.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-examinator-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-examinator
  template:
    metadata:
      labels:
        name: backend-green-examinator
    spec:
      containers:
        - name: exam-provider-container
          image: azspringapiacr1.azurecr.io/provider-examinator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-math-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-math
  template:
    metadata:
      labels:
        name: backend-green-math
    spec:
      containers:
        - name: provider-math-container
          image: azspringapiacr1.azurecr.io/provider-math:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-history-deployment
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-green-history
  template:
    metadata:
      labels:
        name: backend-green-history
    spec:
      containers:
        - name: provider-history-container
          image: azspringapiacr1.azurecr.io/provider-history:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness

---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-math
  namespace: green
spec:
  selector:
    name: backend-green-math
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-history
  namespace: green
spec:
  selector:
    name: backend-green-history
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: endpoint-examinator
  namespace: green
spec:
  selector:
    name: backend-green-examinator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endpoint-examinator-external
  namespace: green
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: endpoint-examinator
                port:
                  number: 80
            pathType: Exact
